# preco_steam

./: 404.html  CONTRIBUTING.md  Makefile  README.md  alembic.ini  ativar.bat  executar.bat  index.html  main.py  mkdocs.yml  pyproject.toml  recuperar.csv  requirements.txt  teste  teste.csv  teste.py
codigo/: aplicacao.py
codigo/componentes/: __init__.py  botao.py  botao_menu.py  caixa_de_marcar.py  entrada.py  janelas_de_mensagem.py  rotulo.py  tabela.py
codigo/dados/: atualiza_banco.py  banco.py  conexao.py
codigo/dados/migracoes/: env.py
codigo/dados/modelos/: __init__.py  base.py  jogos.py  precos.py
codigo/servicos/: api.py  steam_api.py
codigo/telas/: tela_base.py
codigo/telas/cadastro/: tela_cadastro.py
codigo/telas/detalhe/: tela_detalhe.py
codigo/telas/inicial/: tela_inicial.py
codigo/utilidades/: __init__.py  asincrono.py  excecoes.py  formata_dinheiro.py  getor_de_telas.py  padrao_de_cores.py  pasta_do_aplicativo.py  versao_do_aplicativo.py
codigo/utilidades/cria_layouts/: caixa_horizontal.py  caixa_vertical.py  moldura.py
docs/: index.md  licenca.md
docs/desenvolvimento/: contribuir.md  index.md  main.md  makefile.md
docs/desenvolvimento/codigo/: aplicacao.md  index.md
docs/desenvolvimento/codigo/imgs/: index.md
docs/usuarios/: index.md
search/: search_index.json
tests/: test_aplicacao.py  test_tela_inicial.py
tests/componentes/: test_botao.py
tests/telas/inicial/: test_tela_inicial.py
tests/utilidades/cria_layouts/: test_cria_layout_caixa_horizontal.py  test_cria_layout_caixa_vertical.py  test_cria_layout_moldura.py
(+13 files in other folders)
