[tool.poetry]
name = "preco_steam"
version = "0.1.0"
description = "Verifica preço na Steam"
authors = ["Lario dos Santos Diniz <lariodiniz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
blue = "^0.9.0"
isort = "^5.10.1"
prospector = "^1.7.7"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.15"
mike = "^1.1.2"
pytest-qt = "^4.0.2"
pip-audit = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
